# hyperlight

./: .gitignore  .gitmodules  .squashed-commit-marker  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Justfile  MAINTAINERS.md  NOTICE.txt  README.md  c.just  count_simd_instructions.sh  flake.nix  rust-toolchain.toml  typos.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  create_env.sh  devcontainer.json  setup.sh
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  hyperlight-bot.yml  release.yml
dev/: check-license-headers.sh  macos-sign-and-run.sh  notify-ci-failure.sh  notify-fuzzing-failure.sh
docs/: README.md  aarch64-architecture-plan.md  benchmarking-hyperlight.md  cancellation.md  commit-signing.md  dco-compliance.md  debugging-hyperlight.md  getting-started.md  github-labels.md  glossary.md  guest-time.md  how-to-build-a-hyperlight-guest-binary.md  how-to-debug-a-hyperlight-guest.md  how-to-make-releases.md  how-to-run-coverage.md  how-to-use-flatbuffers.md  hyperlight-execution-details.md  hyperlight-metrics-logs-and-traces.md  hyperlight-surrogate-development-notes.md  msr.md  paging-development-notes.md  picolibc.md  security-guidance-for-developers.md  security.md  signal-handlers-development-notes.md  snapshot-file-implementation-plan.md  snapshot-oci-format.md  snapshot-versioning.md  virtio-host-guest-communication.md
fuzz/: Cargo.toml  README.md
hack/: clippy-package-features.sh  rust-dependabot-patch.Dockerfile  update-actions.sh
src/hyperlight_ci/: Cargo.toml
src/hyperlight_ci/src/: bench.rs  bench_report.rs  main.rs
src/hyperlight_ci/src/bench/: args.rs  cpu.rs  discovery.rs  mod.rs  output.rs  process.rs  progress.rs  runner.rs
src/hyperlight_ci/src/bench_report/: mod.rs  table.rs
src/hyperlight_common/: Cargo.toml
src/hyperlight_common/benches/: buffer_pool.rs  virtq_api.rs
src/hyperlight_common/benches/common/: mod.rs
src/hyperlight_common/src/: fixed_buf.rs  host_calling.rs  hyperlight_peb.rs  input_output.rs  layout.rs  lib.rs  log_level.rs  mem.rs  outb.rs  peb.rs  time.rs  version_note.rs  vm.rs  vmem.rs
src/hyperlight_common/src/arch/aarch64/: layout.rs  vmem.rs
src/hyperlight_common/src/arch/amd64/: layout.rs  vm.rs  vmem.rs
src/hyperlight_common/src/arch/i686/: layout.rs  vmem.rs
src/hyperlight_common/src/flatbuffer_wrappers/: function_call.rs  function_types.rs  guest_error.rs  guest_log_data.rs  guest_log_level.rs  guest_trace_data.rs  host_function_definition.rs  host_function_details.rs  hyperlight_peb.rs  mod.rs  util.rs
src/hyperlight_common/src/flatbuffers/: mod.rs
src/hyperlight_common/src/func/: error.rs  functions.rs  mod.rs  param_type.rs  ret_type.rs  utils.rs
src/hyperlight_common/src/input_output/: mod.rs
src/hyperlight_common/src/ring/: access.rs  alloc.rs  desc.rs  event.rs  mod.rs  ring.rs
src/hyperlight_common/src/virtq/: access.rs  alloc.rs  api.rs  buffer.rs  concurrency.rs  consumer.rs  desc.rs  desc.rs.rej  event.rs  mod.rs  msg.rs  pool.rs  producer.rs  recycle_pool.rs  ring.rs  stream.rs
src/hyperlight_component_macro/: Cargo.toml
src/hyperlight_component_macro/src/: lib.rs
src/hyperlight_component_util/: Cargo.toml
src/hyperlight_component_util/src/: component.rs  elaborate.rs  emit.rs  etypes.rs  guest.rs  hl.rs  host.rs  resource.rs  rtypes.rs  substitute.rs  util.rs
src/hyperlight_component_util/tests/: wasmtime_guest_codegen.rs
src/hyperlight_guest/: Cargo.toml  build.rs
src/hyperlight_guest/src/: chkstk.rs  entrypoint.rs  error.rs  exit.rs  gdt.rs  guest_error.rs  guest_function_call.rs  guest_function_definition.rs  guest_function_register.rs  guest_logger.rs  host_error.rs  host_function_call.rs  host_functions.rs  idt.rs  idtr.rs  interrupt_entry.rs  interrupt_handlers.rs  layout.rs  lib.rs  logging.rs  memory.rs  prim_alloc.rs  print.rs  security_check.rs  setjmp.rs  shared_input_data.rs  shared_output_data.rs  time.rs  virtq_mem.rs
src/hyperlight_guest/src/arch/aarch64/: exit.rs  layout.rs  prim_alloc.rs
src/hyperlight_guest/src/arch/amd64/: exit.rs  layout.rs  prim_alloc.rs
src/hyperlight_guest/src/arch/i686/: layout.rs  prim_alloc.rs
src/hyperlight_guest/src/exceptions/: gdt.rs  handlers.rs  idt.rs  idtr.rs  interrupt_entry.rs
src/hyperlight_guest/src/guest_handle/: host_comm.rs  io.rs
src/hyperlight_guest/src/virtq/: context.rs  mem.rs  mod.rs
src/hyperlight_guest_bin/: Cargo.toml  bindgen_wrapper.h  build.rs  build_files.rs
src/hyperlight_guest_bin/.cargo/: config.toml
src/hyperlight_guest_bin/c/: clock.c  mimalloc.c
src/hyperlight_guest_bin/include/: picolibc.h
src/hyperlight_guest_bin/src/: exception.rs  guest_logger.rs  host_bridge.rs  host_comm.rs  init.rs  lib.rs  libc_stubs.rs  memory.rs  paging.rs  time.rs  virtq.rs  virtq_init.rs
src/hyperlight_guest_bin/src/arch/aarch64/: layout.rs  mod.rs  paging.rs
src/hyperlight_guest_bin/src/arch/aarch64/exception/: entry.rs  handle.rs  mod.rs  types.rs
src/hyperlight_guest_bin/src/arch/amd64/: context.rs  init.rs  layout.rs  machine.rs  mod.rs
src/hyperlight_guest_bin/src/arch/amd64/exception/: entry.rs  handle.rs  mod.rs
src/hyperlight_guest_bin/src/arch/amd64/exn/: entry.rs  handle.rs
src/hyperlight_guest_bin/src/exceptions/: gdt.rs  handler.rs  idt.rs  idtr.rs  interrupt_entry.rs
src/hyperlight_guest_bin/src/guest_function/: call.rs  definition.rs  register.rs
src/hyperlight_guest_bin/src/virtq/: mod.rs  state.rs
src/hyperlight_guest_capi/: Cargo.toml  build.rs
src/hyperlight_guest_capi/src/: dispatch.rs  error.rs  flatbuffer.rs  lib.rs  logging.rs  time.rs  types.rs  user_data.rs
src/hyperlight_guest_capi/src/types/: function_call.rs  parameter.rs  vec.rs
src/hyperlight_guest_tracing/: Cargo.toml
src/hyperlight_guest_tracing/src/: invariant_tsc.rs  lib.rs  state.rs  subscriber.rs  visitor.rs
src/hyperlight_hvf/: Cargo.toml
src/hyperlight_hvf/src/: core.rs  lib.rs  proto.rs
src/tests/rust_guests/simpleguest/: Cargo.toml
src/tests/rust_guests/simpleguest/.cargo/: config.toml
src/tests/rust_guests/simpleguest/src/: main.rs
(+297 files in other folders)
