[package]
name = "hyperlight-ci"
edition = "2021"
# fields intentionally not set, to avoid accidentally publishing this crate to crates.io
description = """
Hyperlight's CI and development tools.
"""

[lints]
workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
criterion-markdown = "0.1"
criterion-swarm = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt"] }