[package]
name = "hyperlight-ci"
edition = "2021"
# fields intentionally not set, to avoid accidentally publishing this crate to crates.io
description = """
Hyperlight's CI and development tools.
"""

[lints]
workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.17"
num_cpus = "1"
tokio = { version = "1", features = ["rt", "process", "io-util", "sync", "macros"] }
ansi-replace = "0.1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-pool = "0.0.18"
cpu-pin = { version = "0.1.3", features = ["tokio"] }