[package]
name = "hyperlight-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = """
Hyperlight's components common to host and guest.
"""

[lints]
workspace = true

[dependencies]
arbitrary = {version = "1.4.2", optional = true, features = ["derive"]}
anyhow = { version = "1.0.100", default-features = false }
atomic_refcell = "0.1.13"
bitflags = "2.10.0"
bytemuck = { version = "1.24", features = ["derive"] }
bytes = { version = "1",  default-features = false }
fixedbitset = { version = "0.5.7",  default-features = false }
flatbuffers = { version = "25.12.9", default-features = false }
log = "0.4.29"
smallvec = "1.15.1"
spin = "0.10.0"
thiserror = { version = "2.0.18", default-features = false }
tracing = { version = "0.1.43", optional = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
fuzzing = ["dep:arbitrary"]
trace_guest = []
mem_profile = []
std = ["thiserror/std", "log/std", "tracing/std"]
init-paging = []

[dev-dependencies]
criterion = "0.8.1"
hyperlight-testing = { workspace = true }
quickcheck = "1.0.3"
rand = "0.9.2"

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"

[lib]
bench = false # see https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
doctest = false # reduce noise in test output

[[bench]]
name = "buffer_pool"
harness = false
