[package]
name = "hyperlight-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = """
Hyperlight's components common to host and guest.
"""

[lints]
workspace = true

[dependencies]
anyhow = { version = "1.0.102", default-features = false }
arbitrary = {version = "1.4.2", optional = true, features = ["derive"]}
bitflags = "2.10.0"
bytemuck = { version = "1.24", features = ["derive"] }
log = "0.4.29"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
smallvec = "1.15.1"
spin = "0.11.0"
thiserror = { version = "2.0.18", default-features = false }
tracing = { version = "0.1.44", optional = true }
tracing-core = { version = "0.1.36", default-features = false }

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
fuzzing = ["dep:arbitrary"]
trace_guest = []
mem_profile = []
std = ["thiserror/std", "log/std", "tracing/std"]
i686-guest = []
nanvix-unstable = ["i686-guest"]
guest-counter = []

[dev-dependencies]
quickcheck = "1.0.3"
rand = "0.9.2"

[lib]
bench = false # see https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
doctest = false # reduce noise in test output
