[package]
name = "hyperlight-component-macro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = """
Procedural macros to generate Hyperlight host and guest bindings from component types
"""

[lib]
name = "hyperlight_component_macro"
proc-macro = true

[dependencies]
quote = { version = "1.0.45" }
proc-macro2 = { version = "1.0.106" }
syn = { version = "3.0.1" }
itertools = { version = "0.15.0" }
prettyplease = { version = "0.2.37" }
hyperlight-component-util = { workspace = true }
env_logger = { version = "0.11.10" }