[package]
name = "hyperlight-component-util"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = """
Shared implementation for the procedural macros that generate Hyperlight host and guest bindings from component types
"""

[lib]
name = "hyperlight_component_util"

[dependencies]
wasmparser = { version = "0.240.0" }
quote = { version = "1.0.41" }
proc-macro2 = { version = "1.0.103" }
syn = { version = "2.0.109" }
itertools = { version = "0.14.0" }
prettyplease = { version = "0.2.37" }
log = { version = "0.4" }