[package]
name = "hyperlight-component-util"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = """
Shared implementation for the procedural macros that generate Hyperlight host and guest bindings from component types
"""

[lib]
name = "hyperlight_component_util"

[dependencies]
wasmparser = { version = "0.254.0" }
wit-component = { version = "0.253.0" }
wit-parser = { version = "0.253.0" }
quote = { version = "1.0.45" }
proc-macro2 = { version = "1.0.106" }
syn = { version = "3.0.1" }
itertools = { version = "0.15.0" }
prettyplease = { version = "0.3.0" }
tracing = { version = "0.1.44", features = ["log"]}