[package]
name = "hyperlight-guest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = """
Provides only the essential building blocks for interacting with the host environment, including the VM exit mechanism, abstractions for calling host functions and receiving return values, and the input/output stacks used for guest-host communication.
"""

[dependencies]
anyhow = { version = "1.0.100", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hyperlight-common = { workspace = true }
hyperlight-guest-tracing = { workspace = true, default-features = false }
flatbuffers = { version= "25.9.23", default-features = false }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }

[features]
default = []
trace_guest = ["hyperlight-guest-tracing/trace"]
