[package]
name = "hyperlight-guest-bin"
links = "c"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = """
This crate provides the opinionated bits of the guest library, such as the panic handler, the entry point, the guest logger, the exception handling logic, 
and third-party code used by our C-API needed to build a native hyperlight-guest binary.
"""

[features]
default = ["libc"]
libc = [] # compile libc from picolibc
trace_guest = ["hyperlight-common/trace_guest", "hyperlight-guest/trace_guest", "hyperlight-guest-tracing/trace"]
mem_profile = ["hyperlight-common/unwind_guest","hyperlight-common/mem_profile"]

[dependencies]
hyperlight-guest = { workspace = true, default-features = false }
hyperlight-common = { workspace = true, default-features = false }
hyperlight-guest-tracing = { workspace = true, default-features = false }
log = { version = "0.4", default-features = false }
spin = "0.10.0"
libc_alloc = "1.0.7"

[lints]
workspace = true

[build-dependencies]
anyhow = "1"
cc = "1.2"
cfg-if = "1.0"
glob = "0.3.3"
