[package]
name = "hyperlight_guest_capi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = ["/include"]

[lib]
crate-type = ["staticlib"]

[lints]
workspace = true

[dependencies]
hyperlight-guest = { workspace = true, default-features = false }
hyperlight-guest-bin = { workspace = true, default-features = true }
hyperlight-common = { workspace = true, default-features = false }

flatbuffers = { version = "25.2.10", default-features = false }
tracing = { version = "0.1.41", default-features = false, features = ["log"] }

[build-dependencies]
cbindgen = "0.29.2"
