[package]
name = "hyperlight-guest-tracing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = """Provides the tracing functionality for the hyperlight guest."""

[dependencies]
heapless = { version = "0.8.0", features = ["serde"] }
hyperlight-common = { workspace = true, default-features = false }
spin = "0.10.0"
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }
tracing-core = { version = "0.1.34", default-features = false }

[lints]
workspace = true

[features]
default = []
trace = [ "hyperlight-common/trace_guest" ]
