[package]
name = "hyperlight-hvf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = """
Shared Hypervisor.framework (HVF) core and surrogate IPC protocol (macOS, aarch64).
Used by hyperlight-host (direct backend and surrogate client) and by the
hvf_surrogate binary (surrogate server).
"""

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
applevisor-sys = "1.0"
hyperlight-common = { workspace = true, default-features = true, features = [ "std" ] }
libc = "0.2.186"
